--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client_src",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Ethel-Ecc.github.io/saal_pms",
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.1.1",
@@ -14,6 +15,11 @@
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build && cp -r build/* ../client/",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
